<resources>
    <string name="app_name">Btlock</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="error_invalid_password">六位密码哦~</string>
    <string name="error_incorrect_password">密码错误</string>
    <string name="error_field_required">请填写您的信息</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_settings">设置</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="developers">开发者</string>
    <string name="github">Github: https://github.com/rockzhai</string>
    <string name="open_source">用到的开源库</string>
    <string name="open_source_libraries_list">MaterialNavigationDrawer:1.3.3\n\nme.drakeet.materialdialog:library:1.3.1\n\ndmytrodanylyk.android-process-button:library:1.0.0</string>
    <string name="index">技术博客: https://www.zhaidy.cc</string>
    <string name="introduce">这是一款为蓝牙锁的智能终端应用，提供蓝牙开锁，用户管理，指纹添加等功能。\n\n\n 通过蓝牙连接，走向智能家居的第一步…</string>
</resources>
