<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="10dp"
                app:layout_collapseMode="parallax">

                <ImageView
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:layout_marginTop="24dp"
                    android:src="@drawable/photo2" />

                <TextView
                    android:id="@+id/tv_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textColor="@android:color/white"
                    android:textSize="14sp"
                    tools:text="Version 1.0.0" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:paddingLeft="4dp"
                    android:text="软件介绍"
                    android:textColor="@android:color/darker_gray" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_card"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:autoLink="web"
                        android:text="@string/introduce"
                        android:textColor="@android:color/black"
                        android:textSize="14sp" />

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_marginTop="12dp"
                    android:background="@color/dark_grey" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/developers"
                    android:textColor="@color/dark_grey" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_card">

                    <ImageView
                        android:id="@+id/iv_avatar"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_margin="16dp"
                        android:src="@drawable/logo" />

                    <TextView
                        android:id="@+id/tv_smartalk"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignTop="@id/iv_avatar"
                        android:layout_toEndOf="@id/iv_avatar"
                        android:layout_toRightOf="@id/iv_avatar"
                        android:text="阿宅 | 团队：808"
                        android:textColor="@color/dark_grey"
                        tools:ignore="HardcodedText" />

                    <TextView
                        android:id="@+id/index"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tv_smartalk"
                        android:layout_toRightOf="@id/iv_avatar"
                        android:autoLink="all"
                        android:text="@string/index"
                        android:textColor="@color/dark_grey" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/index"
                        android:layout_toEndOf="@id/iv_avatar"
                        android:layout_toRightOf="@id/iv_avatar"
                        android:autoLink="all"
                        android:text="@string/github"
                        android:textColor="@color/dark_grey" />

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_marginTop="12dp"
                    android:background="@color/dark_grey" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/open_source"
                    android:textColor="@color/dark_grey" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/bg_card"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/open_source_libraries_list"
                        android:textColor="@color/dark_grey"
                        android:textSize="13sp"
                        tools:ignore="HardcodedText" />


                </RelativeLayout>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
